# image_resizer

./: .dockerignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
app/: config.py  dependencies.py  exceptions.py  image_process.py  main.py  routers.py  schemas.py
tests/: conftest.py  test_image_process.py  test_routers.py
tests/files/: not_image.txt  test_image_32_base64.txt  test_image_64_base64.txt  test_image_base64.txt
